---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: ????
  Features:
    - Added migrations for prototype name changes 
  Changes:
    - Switched over to using Agnel's Zinc Powder
  Bugfixes:
    - Fixed crash when loading old saves
    - Fixed incorrect technology name for Mad Clown's
    - Fixed ingrendients not being added by bob's add recipe
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 2026-01-10
  Features:
    - Updated for 2.0
  Changes:
    - Fixed some incorrect recipes
    - Fixed some missing locale names
---------------------------------------------------------------------------------------------------
Version: 0.5.11
Date: 2024-08-31
  Locale:
    - Updated Ukrainian, German and French localizations
---------------------------------------------------------------------------------------------------
Version: 0.5.10
Date: 2023-12-23
  Changes:
    - Renamed Sodium Processing 2 to Sodium Processing 3 as Angel's has added a Sodium Processing 2 tech
    - Tidied up prerequisites and required science packs
    - The following buildings now take Tungsten carbide plate instead of Copper tungsten plate to match the other T6 Angel's buildings:
      - Advanced gas refinery 4
      - Biter refugium 3
      - Leaching plant 4
      - Ore refinery 3
    - Adjusted the ingredient tiers for the following structures to eliminate a tier gap:
      - Algae farm 5
      - Hydro plant 4
    - All T5 and T6 buildings should now use Titanium concrete bricks
    - Set minimum required building tiers for Copper Tungsten and Tungsten Carbide recipes
---------------------------------------------------------------------------------------------------
Version: 0.5.9
Date: 2023-04-06
  Bugfixes:
    - Fixed that in expensive recipe mode, Washing plant 2 was an ingredient in Washing plant 4